--- a/package.json
+++ b/package.json
@@ -1,35 +1,40 @@
 {
-  "name": "pdp-7",
+  "name": "hospital",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@mantine/core": "^6.0.19",
+    "@mantine/dates": "^6.0.19",
     "@mantine/form": "^6.0.19",
     "@mantine/hooks": "^6.0.19",
+    "@mantine/modals": "^6.0.19",
     "@mantine/notifications": "^6.0.19",
-    "@tabler/icons-react": "^2.31.0",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@tabler/icons-react": "^2.35.0",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.36",
-    "@types/query-string": "^6.3.0",
-    "@types/react": "^18.2.13",
-    "@types/react-dom": "^18.2.6",
+    "@types/node": "^16.18.44",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "aos": "^2.3.4",
     "axios": "^1.4.0",
-    "bootstrap": "^5.3.1",
-    "classnames": "^2.3.2",
-    "firebase": "^10.2.0",
+    "build": "^0.1.4",
+    "dayjs": "^1.11.9",
     "lodash": "^4.17.21",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.1",
+    "react-icons": "^4.11.0",
+    "react-imask": "^7.1.3",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.63.6",
+    "sass": "^1.67.0",
+    "self-update": "^0.0.1",
+    "store2": "^2.14.2",
     "typescript": "^4.9.5",
+    "use-query-params": "^2.2.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
@@ -37,16 +42,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --color --fix"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ],
-    "rules": {
-      "@typescript-eslint/no-unused-vars": "warn"
-    }
+    ]
   },
   "browserslist": {
     "production": [
@@ -61,7 +63,8 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.197",
+    "@types/lodash": "^4.14.196",
+    "@types/query-string": "^6.3.0",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "eslint": "^8.20.0",
