--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.2.7",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.2",
     "build": "^0.1.4",
     "dayjs": "^1.11.9",
     "lodash": "^4.17.21",
